--- a/trilce-app/src/main/resources/templates/index.html
+++ b/trilce-app/src/main/resources/templates/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panel Principal</title>
+    <link rel="stylesheet" th:href="@{/css/index.css}" />
   </head>
   <body>
-    <h1>Bienvenido al Sistema Trilce</h1>
+    <header class="navbar">
+      <nav class="nav-container">
+        <div class="nav-logo">
+          <img src="logo-trilce.png" alt="Logo Trilce" />
+        </div>
+        <ul class="nav-links">
+          <li><a th:href="@{/}">Inicio</a></li>
+          <li><a th:href="@{/usuarios}">Usuarios</a></li>
+          <li><a th:href="@{/sesiones}">Sesiones</a></li>
+          <li><a th:href="@{/actividades}">Actividades</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <ul>
-      <li><a th:href="@{/usuarios}">Gestión de Usuarios</a></li>
-      <li><a th:href="@{/sesiones}">Sesiones de Laboratorio</a></li>
-      <li><a th:href="@{/actividades}">Gestión de Actividades</a></li>
-      <li></li>
-    </ul>
+    <main class="main-content">
+      <h1>Bienvenido al Sistema Trilce</h1>
+    </main>
   </body>
 </html>
