Integración de funciones de editar en Sesiones y vista de los detalles de Actividades.

--- a/trilce-app/src/main/resources/templates/editar_usuario.html
+++ b/trilce-app/src/main/resources/templates/editar_usuario.html
@@ -13,8 +13,7 @@
           <img src="/img/logo-trilce.png" alt="Logo Trilce" />
         </div>
         <ul class="nav-links">
-          <li><a th:href="@{/}">Inicio</a></li>
-          <li><a th:href="@{/usuarios}">Usuarios</a></li>
+          <li><a th:href="@{/usuarios}">Regresar</a></li>
         </ul>
       </nav>
     </header>
@@ -47,7 +46,6 @@
         </select>
 
         <button type="submit">Actualizar</button>
-        <a th:href="@{/usuarios}">Cancelar</a>
       </form>
     </main>
   </body>
