--- a/trilce-app/src/main/resources/templates/index.html
+++ b/trilce-app/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <header class="navbar">
       <nav class="nav-container">
         <div class="nav-logo">
-          <img src="logo-trilce.png" alt="Logo Trilce" />
+          <img src="/img/logo-trilce.png" alt="Logo Trilce" />
         </div>
         <ul class="nav-links">
           <li><a th:href="@{/}">Inicio</a></li>
