Inclusión del controlador, página y direccionamiento de Gemini.

--- a/trilce-app/src/main/resources/templates/index.html
+++ b/trilce-app/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
           <li><a th:href="@{/usuarios}">Usuarios</a></li>
           <li><a th:href="@{/sesiones}">Sesiones</a></li>
           <li><a th:href="@{/actividades}">Actividades</a></li>
+          <li><a th:href="@{/gemini}">Gemini</a></li>
         </ul>
       </nav>
     </header>
